--- a/a_login.html
+++ b/a_login.html
@@ -5,12 +5,20 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="css/m_common.css" />
 		<link href="css/style.css" rel="stylesheet" />
 		<style>
-			.area {
-				margin: 20px auto 0px auto;
-			}
+			body {
+				width: 100%;
+				height: 100%;
+				margin: 0px;
+				padding: 0px;
+				background: #fff;
 			
+			}
+			.mui-content {
+				background: #fff;	
+			}
 			.mui-input-group {
 				margin-top: 10px;
 			}
@@ -28,60 +36,43 @@
 			.mui-input-row label~textarea {
 				width: 78%;
 			}
-			
-			.mui-checkbox input[type=checkbox],
-			.mui-radio input[type=radio] {
-				top: 6px;
-			}
-			
-			.mui-content-padded {
-				margin-top: 25px;
-			}
-			
-			.mui-btn {
-				padding: 10px;
-			}
-			
 			.link-area {
 				display: block;
-				margin-top: 25px;
+				margin-top: 1rem;
 				text-align: center;
 			}
-			
 			.spliter {
 				color: #bbb;
 				padding: 0px 8px;
 			}
-			
-			.oauth-area {
-				position: absolute;
-				bottom: 20px;
-				left: 0px;
-				text-align: center;
-				width: 100%;
-				padding: 0px;
-				margin: 0px;
+			.mui-switch:before {
+				font-family: helvetica;
+				font-size: 12px;
+				font-weight: normal;
+				margin-top: 4px;
 			}
-			
-			.oauth-area .oauth-btn {
-				display: inline-block;
-				width: 50px;
-				height: 50px;
-				background-size: 30px 30px;
-				background-position: center center;
-				background-repeat: no-repeat;
-				margin: 0px 20px;
-				/*-webkit-filter: grayscale(100%); */
-				border: solid 1px #ddd;
-				border-radius: 25px;
+			.mui-switch.mui-active {
+				background-color: #00D6B3;
+				border-color: #00D6B3;
 			}
-			
-			.oauth-area .oauth-btn:active {
-				border: solid 1px #aaa;
+			#login {
+				padding: 0;
+				width: 60%;
+				height: 3.4rem;
+				margin-top: 2rem;
+				margin-left: 20%;
+				font-size: 1.2rem;
 			}
-			
-			.oauth-area .oauth-btn.disabled {
-				background-color: #ddd;
+			.mui-table-view:before {
+				height: 0;
+			}
+			/*图标替换*/
+			.iconfont {
+				font-size: 24px;
+				color: #8f8f8f;
+			}
+			.mui-input-row label {
+				padding: 8px 15px 0;	
 			}
 		</style>
 
@@ -95,11 +86,11 @@
 		<div class="mui-content">
 			<form id='login-form' class="mui-input-group">
 				<div class="mui-input-row">
-					<label>账号</label>
+					<label><i class="icon iconfont">&#xe637;</i></label>
 					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
 				</div>
 				<div class="mui-input-row">
-					<label>密码</label>
+					<label><i class="icon iconfont">&#xe600;</i></label>
 					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="请输入密码">
 				</div>
 			</form>
