--- a/account/m_account_channel.html
+++ b/account/m_account_channel.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
 <html>
-
-	<head>
+	<head lang="en">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/m_common.css" />
-		<link rel="stylesheet" type="text/css" href="../css/m_expsubmit_finance.css" />
+		<title>渠道数据提交</title>
+		<link href="../css/mui.min.css" rel="stylesheet"/>
+	    <link rel="stylesheet" type="text/css" href="../css/m_common.css"/>
+	    <link rel="stylesheet" type="text/css" href="../css/m_expsubmit_finance.css"/>
+
 	</head>
 
 	<body>
-
-		<body>
 			<header id="header" class="mui-bar mui-bar-nav">
 				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-				<h1 class="mui-title">信息登记</h1>
+				<h1 class="mui-title">渠道数据提交</h1>
 			</header>
 			<div class="mui-content">
 				<form class="mui-input-group">
+					<div class="mui-input-row finance-select">
+						<label>选择项目</label>
+						<select id="project_select" class="choose">
+							<option value="0">--</option>
+							<!--{% for x in flist %}
+							    <option value="{{x.id}}">{{x.title}}</option>
+							{%endfor%}-->
+						</select>
+						<span class="mui-icon mui-icon-arrowdown choose-icon"></span>
+					</div>
+					<div class="mui-input-row">
+						<label>投资日期（天）</label>
+						<input id="time" type="date" placeholder="请输入投资日期（仅限数字）">
+					</div>
 					<div class="mui-input-row">
 						<label>注册手机号</label>
 						<input id="telnum" type="text" maxlength=11 placeholder="请输入注册手机号">
 					</div>
 					<div class="mui-input-row">
 						<label>投资金额（元）</label>
-						<input type="text" placeholder="请输入投资金额（仅限数字）" id="amount">
+						<input id="amount" type="number" placeholder="请输入投资金额（仅限数字）">
 					</div>
 					<div class="mui-input-row">
 						<label>投资标期（天）</label>
-						<input type="text" placeholder="请输入投资标期（仅限数字）" id="term">
+						<input id="term" type="number" placeholder="请输入投资标期（仅限数字）">
 					</div>
 
 				</form>
@@ -38,24 +51,28 @@
 				</div>
 				<button id="submit_btn" type="button" class="mui-btn mui-btn-blue">确认提交</button>
 			</div>
-			<script src="../js/mui.js"></script>
-			<script src="../js/UserInfo.js"></script>
+			<script src="../js/mui.min.js"></script>
 			<!--弹窗部分-->
 			<script type="text/javascript" charset="utf-8">
-				var id = '';
-				//			var self = '';
 				mui.init();
-				mui.plusReady(function() {
-					id = plus.webview.currentWebview().sub_id;
-				});
 				document.getElementById("submit_btn").addEventListener('tap', function() {
+					var project = document.getElementById('project_select').value;
+					var time = document.getElementById('time').value;
 					var telnum = document.getElementById('telnum').value;
 					var remark = document.getElementById('remark').value;
 					var amount = document.getElementById('amount').value;
-//					amount = parseFloat(amount);
+					// amount = parseFloat(amount);
 					var term = document.getElementById('term').value;
 					var re = /^1[1,2,3,4,6,5,7,8,9]\d{9}$/;
-					var re_amount=/^\d+(\.\d+)?$/;
+					var re_amount = /^\d+(\.\d+)?$/;
+					if(project=="0") {
+						mui.alert("请选择项目");
+						return;
+					}
+					if(!time) {
+						mui.alert("请选择投资日期");
+						return;
+					}
 					if(!re.test(telnum)) {
 						mui.alert("手机号格式不正确！");
 						return;
@@ -69,24 +86,25 @@
 						return;
 					}
 					mui.ajax({
-						url: "http://m.wafuli.cn/app/submit_finance/",
+						url: "http://m.wafuli.cn/account/channel/",
 						type: 'post',
 						data: {
-							'id': id,
+							'id': project,
+							'project': project,
+							'time': time,
 							'amount': amount,
 							'term': term,
 							'telnum': telnum,
 							'remark': remark,
-							'token': UserInfo.token(),
 						},
 						dataType: "json",
 						success: function(ret) {
-							if(ret.code == 0) {
-								mui.alert("提交成功，请通过用户中心查询！");
-							} else if(ret.code < 0) {
-								UserInfo.clear();
-								mui.alert("尚未登录！");
-							} else {
+							if(ret.code==0){
+								mui.alert(ret.msg,callback=function(){
+									mui.back();
+								});
+							}
+							else{
 								mui.alert(ret.msg);
 							}
 						},
@@ -97,6 +115,5 @@
 				});
 			</script>
 		</body>
-	</body>
 
 </html>
