--- a/html/m_expsubmit_finance.html
+++ b/html/m_expsubmit_finance.html
@@ -19,7 +19,7 @@
 			<div class="mui-content">
 				<form class="mui-input-group">
 					<div class="mui-input-row">
-						<label>注册手机号</label>
+						<label>注册手机号&nbsp;&nbsp;</label>
 						<input id="telnum" type="text" maxlength=11 placeholder="请输入注册手机号">
 					</div>
 					<div class="mui-input-row">
