--- a/account/m_account_channel.html
+++ b/account/m_account_channel.html
@@ -6,7 +6,7 @@
 		<title>渠道数据提交</title>
 		<link href="../css/mui.min.css" rel="stylesheet"/>
 	    <link rel="stylesheet" type="text/css" href="../css/m_common.css"/>
-	    <link rel="stylesheet" type="text/css" href="../css/m_expsubmit_finance.css"/>
+	    <link rel="stylesheet" type="text/css" href="../css/m_expsubmit_finances.css"/>
 
 	</head>
 
@@ -18,7 +18,7 @@
 			<div class="mui-content">
 				<form class="mui-input-group">
 					<div class="mui-input-row finance-select">
-						<label>选择项目</label>
+						<label>选择项目&nbsp;&nbsp;</label>
 						<select id="project_select" class="choose">
 							<option value="0">--</option>
 							<!--{% for x in flist %}
@@ -28,12 +28,12 @@
 						<span class="mui-icon mui-icon-arrowdown choose-icon"></span>
 					</div>
 					<div class="mui-input-row">
-						<label>投资日期（天）</label>
-						<input id="time" type="date" placeholder="请输入投资日期（仅限数字）">
+						<label>注册手机号&nbsp;&nbsp;</label>
+						<input id="telnum" type="text" maxlength=11 placeholder="请输入注册手机号">
 					</div>
 					<div class="mui-input-row">
-						<label>注册手机号</label>
-						<input id="telnum" type="text" maxlength=11 placeholder="请输入注册手机号">
+						<label>投资日期（天）</label>
+						<input id="time" type="date" placeholder="请输入投资日期（仅限数字）">
 					</div>
 					<div class="mui-input-row">
 						<label>投资金额（元）</label>
