--- a/m_account_index.html
+++ b/m_account_index.html
@@ -15,8 +15,7 @@
 			<div class="top">
 				<a id="settings" class="diannao" href="#"><i class="icon iconfont">&#xe631;</i></a>
 				<img id="userimg" src="images/user.png" alt="用户头像" />
-				<a href="#">
-					<number id="mobile">123456789</number>
+				<a id="user_login" href="#">
 				</a>
 				<button id="qiandao" type="button" class="mui-btn qiandao">签到+5积分</button>
 			</div>
@@ -129,7 +128,9 @@
 				tempview = plus.webview.getWebviewById("temp");
 				self.addEventListener('show', function() {
 					if(!UserInfo.has_login()) {
-						tologin();
+//						tologin();
+						document.getElementById('user_login').innerHTML = '<span id="open_login">登录/注册</span>';//jzy
+						qiandao_btn.innerHTML = "未登录";  //jzy
 					} else {
 						refresh_userinfo();
 					}
@@ -145,14 +146,9 @@
 			function display_userinfo(dict) {
 				if(!dict) {
 					document.getElementById('userimg').src = "images/user.png";
-//<<<<<<< HEAD
-////					document.getElementById('mobile').innerText = "";  //jzy
-//					document.getElementById('user_login').innerHTML = '<span id="open_login">登录/注册</span>';  //jzy
-//					qiandao_btn.innerHTML = "签到+5积分";  //jzy
-//					document.getElementById('scores').innerText = "";
-//=======
-					document.getElementById('mobile').innerText = "";
-//>>>>>>> d104872f87daa5ae003ff18fc9ee36173181acd7
+					document.getElementById('user_login').innerHTML = '<span id="open_login">登录/注册</span>';  //jzy
+					qiandao_btn.innerHTML = "未登录";  //jzy
+					document.getElementById('scores').innerText = "";
 					document.getElementById('scores').innerText = "";
 					document.getElementById('accu_income').innerHTML = "";
 					document.getElementById('balance').innerText = "";
@@ -160,13 +156,7 @@
 				} else {
 					var img = "images/user-0" + dict.userimg + ".png";
 					document.getElementById('userimg').src = img;
-//<<<<<<< HEAD
-//					document.getElementById('mobile').innerText = dict.mobile;	//jzy
-//					document.getElementById('user_login').innerHTML = '<number id="mobile">' + dict.mobile + '</number>';  //jzy
-//=======
-					document.getElementById('mobile').innerText = dict.mobile;
-					document.getElementById('scores').innerText = dict.scores;
-//>>>>>>> d104872f87daa5ae003ff18fc9ee36173181acd7
+					document.getElementById('user_login').innerHTML = '<number id="mobile">' + dict.mobile + '</number>';  //jzy
 					document.getElementById('accu_income').innerHTML = dict.accu_income;
 					document.getElementById('balance').innerText = dict.balance
 					document.getElementById('scores').innerText = dict.scores;
@@ -217,7 +207,7 @@
 //					//			        });
 //				}
 //			});
-			mui('.mui-row').on('tap', 'a', function(e) {
+			mui('.row-bottom').on('tap', 'a', function(e) {
 				if(!UserInfo.has_login()) {
 					tologin();
 				} else {
@@ -228,6 +218,12 @@
 					}, 10);
 				}
 			});
+			mui('#user_login').on('tap', '#open_login', function(e) {
+					tologin();
+			});
+//			document.getElementById("open_login").addEventListener("tap", function(e) {
+//					tologin();
+//			});
 			
 			document.getElementById("settings").addEventListener("tap", function(e) {
 				if(!UserInfo.has_login()) {
