--- a/m_task.html
+++ b/m_task.html
@@ -138,7 +138,7 @@
 							if(n>0){
 								mui.toast("请检查网络状况！");
 							}
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh(false);
+							obj.endPullUpToRefresh(false);
 						}
 					});
 				}
