--- a/m_finance.html
+++ b/m_finance.html
@@ -127,7 +127,10 @@
 							}
 						},
 						error: function(xhr, type, errorThrown) {
-							alert(type);
+							if(n>0){
+								mui.toast("请检查网络状况！");
+							}
+							obj.endPullUpToRefresh(false);
 						}
 					});
 				}
