--- a/m_index.html
+++ b/m_index.html
@@ -8,6 +8,9 @@
 	    <link href="css/mui.min.css" rel="stylesheet"/>
 	    <link href="css/m_common.css" rel="stylesheet"/>
 	    <style type="text/css">
+	    	nav.mui-bar {
+	    		background-color: #fff;
+	    	}
 	    	nav .iconfont {
 				font-size: 2.4rem;
 				line-height: 3rem;
