--- a/m_index.html
+++ b/m_index.html
@@ -205,7 +205,7 @@
 			                }
 			            }else{
 //			                console.log("检测更新失败！");
-			                plus.nativeUI.alert("检测更新失败！");
+//			                plus.nativeUI.alert("检测更新失败！");
 			            }
 		            	break;
 		            default:
