--- a/m_welfare.html
+++ b/m_welfare.html
@@ -133,7 +133,7 @@
 	            <p>微信公众号_天天挖福利</p>
 	        </div>
 	    </div>
-		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/feed.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/html5sql.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/news.js"></script>
@@ -159,7 +159,7 @@
 					up: {
 						contentrefresh: '正在加载...',
 						callback: pullupRefresh,
-						auto:false
+						auto:true
 					}
 				}
 			});
@@ -206,7 +206,7 @@
 //	      		},500);
 			});
 			function throwGetNewsError() {
-				mui.toast("获取新闻时发生了异常");
+//				mui.toast("获取新闻时发生了异常");
 				var refresh_hint = document.getElementById("refresh_hint");
 				var imgsrc = 'images/error-loading-img.jpg';
 				refresh_hint.innerHTML= '<img id="error_loading_img" style="width: 100%;" src="'+ imgsrc + '">';
@@ -221,6 +221,9 @@
 				var title = this.getAttribute("title");
 				var img = this.querySelector('img').src;
 				open_welfare_detail(this.getAttribute('data_id'),this.getAttribute('data_type'),title,img);
+			});
+			mui('#today').on('tap', '#error_loading_img', function() {
+				mui('#pullrefresh').pullRefresh().pulldownLoading();
 			});
 			mui('#nav').on('tap', 'a', function() {
 				var id = this.id;
@@ -345,6 +348,7 @@
 					mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
 				}, function() {
 					mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
+					throwGetNewsError();
 				});
 				var wvs=plus.webview.all();
 //				for(var i=0;i<wvs.length;i++){
