--- a/m_welfare.html
+++ b/m_welfare.html
@@ -193,11 +193,11 @@
 					document.getElementById("new_num").innerText = ret.new_num;
 					document.getElementById("all_num").innerText = ret.all_num;
 				});
-				tempview = mui.preload({url:"", id:"temp",styles: {	hardwareAccelerated: true}});
+				tempview = mui.preload({url:"", id:"temp",styles: {popGesture:'hide',hardwareAccelerated: true}});
 	      		tempview.addEventListener('hide',function(){
 	      			tempview.clear();
 	      		});
-	      		tempview2 = mui.preload({url:"", id:"temp2",styles: {	hardwareAccelerated: true}});
+	      		tempview2 = mui.preload({url:"", id:"temp2",styles: {popGesture:'hide',hardwareAccelerated: true}});
 	      		tempview2.addEventListener('hide',function(){
 	      			tempview2.clear();
 	      		});
