--- a/m_index.html
+++ b/m_index.html
@@ -10,6 +10,9 @@
 	    <style type="text/css">
 	    	nav.mui-bar {
 	    		background-color: #fff;
+	    		-webkit-box-shadow: none;
+	    		box-shadow: none;
+	    		border-top: 1px solid #e4e4e4;
 	    	}
 	    	nav .iconfont {
 				font-size: 2.4rem;
