--- a/account/m_account_invite.html
+++ b/account/m_account_invite.html
@@ -16,9 +16,9 @@
 	<div class="mui-content">
 		<div class="top">
 			<p>我的邀请人数&nbsp;<span id="invite_num"></span>&nbsp;人</p>
-			<p>我的奖励&nbsp;<span id="invite_award"></span>&nbsp;元，<span id="invite_score"></span>&nbsp积分;</p>
-			<p>本月待发奖励&nbsp;<span id="to_award"></span>&nbsp;元</p>
-			<p>邀请奖励结余&nbsp;<span id="left_award"></span>&nbsp;元</p>
+			<p>我的奖励&nbsp;<span id="invite_award"></span>&nbsp;福币，<span id="invite_score"></span>&nbsp;积分</p>
+			<p>本月待发奖励&nbsp;<span id="to_award"></span>&nbsp;福币</p>
+			<p>邀请奖励结余&nbsp;<span id="left_award"></span>&nbsp;福币</p>
 			<button id="transfer_btn" type="button" class="mui-btn mui-btn-blue">转至余额</button>
 		</div>
 		<div class="middle">
