--- a/m_welfare.html
+++ b/m_welfare.html
@@ -183,10 +183,10 @@
 					}
 					setTimeout(function(){
 						getTemplate('welfare','template.html',"html/m_detail_welfare.html");
-						browser = getTemplate("browser","browser.html","");
-						browser.header.addEventListener('show',function(){
-							browser.content.show('none');
-						});
+//						browser = getTemplate("browser","browser.html","");
+//						browser.header.addEventListener('show',function(){
+//							browser.content.show('none');
+//						});
 					},400);
 				});
 				mui.getTodayNum(TODAY_NUM_URL, function(ret){
