--- a/account/m_account_withdraw.html
+++ b/account/m_account_withdraw.html
@@ -35,7 +35,7 @@
 			</form>
 		    <p>
 		    	<span>可提现福币（个）：<number id="balance"></number></span>
-				<span>提现福币限<number>1000</number>的整数倍</span>
+				<span>提现福币数至少为<number>1000</number></span>
 			</p>
 			<button id="Btn" type="button" class="mui-btn mui-btn-blue mui-btn-block">确认提现</button>
 		</div>
